# effective-embedded

./: .gitignore  README.md  diagram.json  wokwi.toml
01_initial/: diagram.json  mise.toml  platformio.ini  wokwi.toml
01_initial/src/: main.c
04_blinky_esp32_c/: CMakeLists.txt  diagram.json  mise.toml  platformio.ini
04_blinky_esp32_c/src/: main.c
05_blinky_esp32_rust/: Cargo.toml  diagram.json
05_blinky_esp32_rust/.cargo/: config.toml
05_blinky_esp32_rust/src/: main.rs
06_two_colors_blinky_esp32_c/: CMakeLists.txt  diagram.json
06_two_colors_blinky_esp32_c/src/: main.c
07_two_colors_blinky_esp32_rust/: diagram.json  mise.toml  wokwi.toml
07_two_colors_blinky_esp32_rust/src/: main.rs
08_button_esp32_c/: CMakeLists.txt
08_button_esp32_c/src/: main.c
10_logic_analyzer_esp32_c/: CMakeLists.txt  homework.md  mise.toml
10_logic_analyzer_esp32_c/src/: main.c  main_example.c
11_logic_analyzer_esp32_rust/src/: main.rs
12_adc_esp32_c/: CMakeLists.txt  diagram.json  platformio.ini
12_adc_esp32_c/src/: constants.h  main_arduino.cpp  main_idf.c
13_adc_esp32_rust/: Cargo.toml  diagram.json  diagram_potentiometer.json
13_adc_esp32_rust/src/: main.rs
14_button_blink_esp32_cpp/: CMakeLists.txt  task.md
14_button_blink_esp32_cpp/include/: button.h  config.h  led.h  time_utils.h
14_button_blink_esp32_cpp/src/: button.cpp  button.h  config.h  led.cpp  led.h  main.cpp  time_utils.cpp  time_utils.h
15_button_blink_non_blocking_esp32_rust/: mise.toml
15_button_blink_non_blocking_esp32_rust/src/: button.rs  config.rs  led.rs  main.rs
18_superloop_esp32_cpp/: CMakeLists.txt  platformio.ini  task.md
18_superloop_esp32_cpp/include/: time_utils.h
18_superloop_esp32_cpp/src/: config.h  led.cpp  led.h  main.cpp  time_utils.cpp
18_superloop_esp32_cpp/test/: test_time_utills.cpp
20_project1_esp32_cpp/: CMakeLists.txt  diagram.json  mise.toml  platformio.ini  task.md
20_project1_esp32_cpp/include/: ldr.h  led.h
20_project1_esp32_cpp/src/: config.h  ldr.cpp  ldr.h  led.cpp  led.h  main.cpp  time_utils.cpp  time_utils.h
20_project1_esp32_cpp/test/: test_time_utills.cpp
21_project1_esp32_rust/: diagram.json  diagram_ldr.json  task.md
21_project1_esp32_rust/src/: config.rs  ldr.rs  led.rs  main.rs  sensor.rs
22_relay_esp32_cpp/: CMakeLists.txt  diagram.json  platformio.ini  task.md
22_relay_esp32_cpp/include/: actuator.h  config.h  input.h  time_utils.h
22_relay_esp32_cpp/src/: actuator.cpp  input.cpp  main.cpp  time_utils.cpp
23_relay_esp32_rust/: diagram.json
23_relay_esp32_rust/src/: actuator.rs  config.rs  input.rs  main.rs
24_hardware_interrupts_cpp/: CMakeLists.txt  diagram.json  mise.toml  platformio.ini  task.md
24_hardware_interrupts_cpp/include/: button.h  config.h  solution_interrupt_debounce_state.h  solution_interrupt_debounce_time.h  solution_interrupt_no_debounce.h  solution_polling_debounce.h  time_utils.h
24_hardware_interrupts_cpp/src/: button.cpp  main.cpp  main_arduino.cpp  solution_interrupt_debounce_state.cpp  solution_interrupt_debounce_time.cpp  solution_interrupt_no_debounce.cpp  solution_polling_debounce.cpp  time_utils.cpp
25_hardware_interrupts_rust/: Cargo.toml  diagram.json  task.md
25_hardware_interrupts_rust/src/: config.rs  input.rs  main.rs  states.rs
26_timers_esp32_cpp/: platformio.ini  sdkconfig.esp32-s3-devkitm-1  task.md
26_timers_esp32_cpp/include/: config.h  non_volatile_storage.h  switch.h
27_timers_esp32_rust/: Cargo.toml  diagram.json  task.md
28_traffic_lights_esp32_cpp/: CMakeLists.txt  diagram.json  task.md
29_traffic_lights_esp32_emabaassy_rust/: Cargo.toml  mise.toml  wokwi.toml
29_traffic_lights_esp32_emabaassy_rust/.cargo/: config.toml
29_traffic_lights_esp32_emabaassy_rust/src/: led.rs  main.rs
30_traffic_lights_stm32_cpp/: CMakeLists.txt  platformio.ini
31_traffic_lights_stm32_embaassy_rust/: Cargo.toml  mise.toml  task.md
31_traffic_lights_stm32_embaassy_rust/src/: led.rs  main.rs
32_traffic_lights_stm32_interrupts_rust/: Cargo.toml
32_traffic_lights_stm32_interrupts_rust/src/: led.rs  main.rs  switch.rs
33_kf_esp32_embassy_rust/: .gitignore  Cargo.toml  diagram.json  readme.md  wokwi.toml
34_pwm_stm32_cpp/: mise.toml  platformio.ini  task.md
35_pwm_stm32_inerrupts_rust/: Cargo.toml  task.md
36_servo_stm32_cpp/: CMakeLists.txt  task.md
37_safe_encoder_esp32_cpp/: CMakeLists.txt  diagram.json  mise.toml  task.md  wokwi.toml
38_uart_esp32_cpp/: CMakeLists.txt  diagram.json  mise.toml  wokwi.vcd
38_uart_stm32_cpp/: CMakeLists.txt  task.md
40_uart_stm32_rust/: Cargo.toml
41_i2c_stm32_rust/: Cargo.toml  diagram.json  task.md  wokwi.toml
42_adc_potentiometer_stm32_rust/: Cargo.toml  mise.toml  task.md
42_adc_potentiometer_stm32_rust/src/: main.rs
43_adc_potentiometer_stm32_c/: .gitignore  platformio.ini  requirements.txt  task.md
44_adc_potentiometer_calibration_esp32_c/: CMakeLists.txt  mise.toml  pad.ipynb  platformio.ini  requirements.txt  task.md
45_adc_ldr_stm32_c/: CMakeLists.txt  pad.ipynb  task.md
46_dac_stm32_rust/: Cargo.toml  memory.x  mise.toml
47_dac_stm32_c/: CMakeLists.txt  mise.toml  platformio.ini  task.md
48_project3_esp32_cpp/: .gitignore  CMakeLists.txt  mise.toml  platformio.ini  task.md
49_i2c_clock_ldr_stm32_rust/: .gitignore  Cargo.toml  mise.toml  task.md
49_i2c_clock_ldr_stm32_rust/messages/: Cargo.toml
49_i2c_clock_ldr_stm32_rust/messages/src/: entry.rs
49_i2c_clock_ldr_stm32_rust/src/: adc.rs  entry.rs  main.rs  memory.rs  spi_sender.rs
49_i2c_clock_ldr_stm32_rust/stm32-target/: Cargo.toml  build.rs
49_i2c_clock_ldr_stm32_rust/stm32-target/.cargo/: config.toml
49_i2c_clock_ldr_stm32_rust/stm32-target/src/: adc.rs  clock.rs  main.rs  memory.rs  spi_sender.rs
50_hw42_45_stm32_esp_cpp/: task.md
51_i2c_clock_ldr_stm32_rust_embassy/: mise.toml  task.md
51_i2c_clock_ldr_stm32_rust_embassy/stm32-target/: Cargo.toml  build.rs  memory.x
51_i2c_clock_ldr_stm32_rust_embassy/stm32-target/src/: adc.rs  clock.rs  main.rs  memory.rs  spi_sender.rs  utils.rs
(+138 files in other folders)
