[package]
name = "blinky_esp_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32s3"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-backtrace = { version = "0.18.1", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
log = { version = "0.4.20" }
critical-section = "*"


[[bin]]
name = "blinky_esp_rust"
test = false
bench = false
