[package]
name = "blinky_esp_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-backtrace = { version = "0.18.1", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-hal = { version = "1.0.0", features = ["esp32s3", "unstable", "log-04"] }
esp-rtos = { version = "0.2.0", features = ["esp32s3", "embassy", "log-04"] }
esp-println = { version = "0.16.1", features = [
    "esp32s3",
    "timestamp",
    "log-04",
] }
log = { version = "0.4.20" }


embassy-executor = { version = "0.9.1" }
embassy-time = { version = "0.5.0" }
embassy-sync = "0.8.0"
embedded-hal-async = "1.0.0-rc.1"
embedded-io-async = "0.7.0"

static_cell = "2"

critical-section = "1.2.0"

esp-storage = { version = "*", features = ["esp32s3"] }
sequential-storage = "7.2.0"
embassy-embedded-hal = "0.6.0"

[[bin]]
name = "blinky_esp_rust"
test = false
bench = false
