[package]
name = "blinky_esp_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

defmt-rtt = "1"
defmt = "1"

embassy-stm32 = { version = "0.6.0", features = [
    "stm32f401cc",
    "time-driver-any",
    "defmt",
    "memory-x",
] }

embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",

] }
critical-section = "1.2.0"

[[bin]]
name = "blinky_esp_rust"
test = false
bench = false
