[package]
name = "blinky_esp_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal = "1.0"
stm32f4xx-hal = { version = "0.23.0", features = ["stm32f401", "defmt"] }


defmt-rtt = "1"
defmt = "1"

critical-section = "1.2.0"

[[bin]]
name = "blinky_esp_rust"
test = false
bench = false
