[package]
name = "blinky_esp_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal = "1.0"
stm32f4xx-hal = { version = "0.23.0", features = ["stm32f446", "defmt"] }

defmt-rtt = "1.3.0"
defmt = "1.1.1"
ds1307 = "0.6.0"
chrono = { version = "0.4.45", default-features = false }

[dev-dependencies]
embedded-hal-mock = "0.11.1"

[[bin]]
name = "blinky_esp_rust"
test = false
bench = false
debug = true
