[package]
name = "stm32-target"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
stm32f4xx-hal = { version = "0.23.0", features = ["stm32f446", "defmt"] }

defmt-rtt = "1.3.0"
defmt = "1.1.1"
chrono = { version = "0.4.45", default-features = false }

messages = { path = "../messages" }

[dev-dependencies]
embedded-hal-mock = "0.11.1"

[[bin]]
name = "stm32-target"
test = false
bench = false
debug = true
