[package]
name = "stm32-target"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
#stm32f4xx-hal = { version = "0.23.0", features = ["stm32f446", "defmt"] }

embassy-stm32 = { version = "0.6.0", features = ["defmt", "stm32f446re", "unstable-pac", "memory-x", "time-driver-tim4", "exti", "chrono"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
#embassy-sync = { version = "0.8.0", path = "../../embassy-sync", features = ["defmt"] }

defmt-rtt = "1.3.0"
defmt = "1.1.1"
chrono = { version = "0.4.45", default-features = false }

messages = { path = "../messages" }

[dev-dependencies]
embedded-hal-mock = "0.11.1"

[[bin]]
name = "stm32-target"
test = false
bench = false
debug = true
